syntax = "proto3";
package kratos.api;

option go_package = "material/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Company company = 3;
  Volcengine volcengine = 4;
  Service service = 5;
  Registry registry = 6;
  Event event = 7;
}

message Server {
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string dsn = 2;
  }
  message Redis {
    string addr = 1;
    string password = 2;
    int32 db = 3;
    google.protobuf.Duration dial_timeout = 4;
    google.protobuf.Duration read_timeout = 5;
    google.protobuf.Duration write_timeout = 6;
    google.protobuf.Duration material_token_timeout = 7;
    google.protobuf.Duration material_lock_timeout = 8;
  }
  Database database = 1;
  Redis redis = 2;
}

message Company {
  message Material {
    string default_company_material_library_name = 1;
  }

  uint64 default_company_id = 1;
  Material material = 2;
}

message Volcengine {
  message Material {
    string endpoint = 1;
    string url = 2;
    string region = 3;
    string bucket_name = 4;
  }

  message Tos {
    string access_key = 1;
    string secret_key = 2;
    Material material = 4;
  }

  Tos tos = 1;
}

message Service {
  message Company {
    string endpoint = 1;
  }
  Company company = 1;
}

message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }

  Consul consul = 1;
}

message Event {
  message Kafka {
    string addr = 1;
    string topic = 2;
  }

  Kafka kafka = 1;
}